Fixed grid spacing if negative

--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -298,8 +298,8 @@ ul.elementor-icon-list-items.elementor-inline-items {
 				display: flex;
 				overflow: hidden;
 				flex-wrap: wrap;
-				margin-right: calc(var(--grid-side-margin) / 2);
-				margin-left: calc(var(--grid-side-margin) / 2);
+				margin-right: calc(-1 * var(--grid-side-margin)/2);
+				margin-left: calc(-1 * var(--grid-side-margin)/2);
 
 				&-item > div, &-item > a {
 					margin-right: calc(var(--grid-side-margin) / 2);
